--- a/CSSReview/index.html
+++ b/CSSReview/index.html
@@ -15,7 +15,10 @@
 			<div class="innerbox"> InnerBoxer</div>
 		</div>
 		<div class="box"> Box Tres </div>
-		<h1 style="font-size: 200px;">My Web is Umero Numo </h1>
+		<h1 class="imgText">My Web is Umero Numo </h1>
+		<div class="box">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent porttitor luctus nulla ut auctor. Ut sed diam laoreet, tristique ipsum nec, viverra turpis. Mauris sit amet sem sit amet urna commodo interdum eu in eros. Etiam et ornare eros. Donec ornare felis sapien, sed molestie nisi porta sit amet. Aliquam id porta ligula, eu consequat massa. Suspendisse vitae ex in nulla blandit congue. Aliquam id tristique massa, a viverra libero. Donec non nulla lobortis, laoreet nulla id, euismod est. Integer eu erat felis. Nam volutpat velit et ex feugiat facilisis. Pellentesque lectus urna, hendrerit vel tempus ut, malesuada nec magna. Donec ac quam nunc. Vestibulum massa tellus, auctor sit amet fermentum et, condimentum sit amet lectus. Morbi pellentesque diam id nibh mattis ornare. Ut eu hendrerit odio.</p>
+		</div>
 	</body>
 
 
