added textbook exercises

--- a/Layout Fixed/index.html
+++ b/Layout Fixed/index.html
@@ -52,8 +52,8 @@
 				</aside>
 				<div class="clearflt"></div>
 			</main>
-			<footer >
-				<div>
+			<footer class="wrap">
+				<div class="col_320">
 					<h2>Main pages</h2>
 					<nav>
 						<ul>
@@ -66,15 +66,16 @@
 						</ul>
 					</nav>
 				</div>
-				<div>
+				<div class="col_320">
 					<h2>Who are we?</h2>
 					<p>Trails is a community lead organization to encourage outdoor play and preservation in Southern Alberta. </p>
 				</div>
-				<div>
+				<div class="col_320">
 					<h2>Get in touch!</h2>
 					<p>Phone: 403-555-8686<br>
 					Email: info@trailsab.ca</p>
 				</div>
+				<div class="clearflt"></div>
 			</footer>
 		</div>
 	</body>
